Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <raman@cs.cornell.edu>

* Emacspeak 16.0 Additions And Changes:

Emacspeak 16.0 provides the following user level enhancements:

* New Emacspeak Features:
** emacspeak-daisy: Digital Talking Book Reader

Module emacspeak-daisy.el implements a browser for working with
Digital Audio Books conforming to the Daisy3 specification --invoked
by command emacspeak-daisy-open-book.


** Speech-enables W3M

W3M is an alternative to using Emacs W3.

** IMCom for Jabber:

Module emacspeak-imcom provides a speech-enabled wrapper for
Jabber client IMCom.

** XML Shell:

Module emacspeak-xml-shell implements an XML Shell for walking
 XML trees interactively.

** Pronunciation Dictionaries

New Command to interactively edit Emacspeak pronunciation
dictionaries.

** Tools:

*** Wizards for Viewing XL and PowerPoint Files:


Install package xlhtml http://www.xlhtml.org --this provides
convertors xlhtml and ppthtml that convert .xls and .ppt
files to HTML.  If installed, Emacspeak can use this tool to
preview .xls and .ppt files using W3 when a .xls or .ppt
file is opened in emacs.

*** emacspeak-wizards-shell-toggle:

Switches to shell buffer and automatically changes directory
to the default directory of the previously current buffer.



*** Shell mode mode-line format:

Speak directory as part of the mode-line.


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end: